@@ -6,6 +6,7 @@ TGUI 0.8.6  (TBD)
 - Added mousePressed and mouseReleased to respond to different mouse buttons in custom widgets
 - Added focusable property to widgets
 - Added TextureBackground property to Panel and ChildWindow renderers
+- Container widgets didn't pass right click event to child widgets
 
 
 TGUI 0.8.5  (6 April 2019)
